axum-macros/tests/fail/field_doesnt_impl_from_request.rs
use axum_macros::FromRequest;

#[derive(FromRequest)]
struct Extractor {
    thing: bool,
}

fn main() {}
